--- a/loginyregistro/login.html
+++ b/loginyregistro/login.html
@@ -14,7 +14,7 @@
         <div class="login-box">
             <img class="avatar" src="../ExtraDocs/UKWhite.png" alt="Logo de Olympus">
             <h1>Inicia Sesión</h1>
-            <form id="form" action="../Home/Home.html" onsubmit="return validateLogIn()" name="LogIn">
+            <form id="form" method="POST" action="../Home/Home.php" onsubmit="return validateLogIn()" name="LogIn">
                 <!--- USERNAME --->
                 <label for="username">Nombre de Usuario</label>
                 <input type="text" id="username" name="User" placeholder="Introduce tu nombre de usuario">
