--- a/loginyregistro/login.html
+++ b/loginyregistro/login.html
@@ -34,7 +34,7 @@
             const valores = window.location.search;
             const urlParams = new URLSearchParams(valores);
             var usuario = urlParams.get('user');
-            console.log(usuario);
+            //console.log(usuario);
             variable = usuario;
             obtener(variable);
 
